--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "liblouis": "^0.4.0",
+    "liblouis-build": "3.2.0-rc",
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
