--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "postinstall": "node scripts/copy-liblouis-assets.cjs"
   },
   "dependencies": {
-    "liblouis": "^0.4.0",
+    "liblouis": "0.4.0",
     "liblouis-build": "3.2.0-rc",
     "next": "14.2.5",
     "react": "18.2.0",
